changed the API for getting student details
